<package format="2">
  <name>willbot_controllers</name>
  <version>0.1.0</version>
  <description>The willbot_controllers package</description>

  <maintainer email="igor.kalevatykh@inria.fr">Igor Kalevatykh</maintainer>
  <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>

  <export>
    <controller_interface plugin="${prefix}/willbot_controllers_plugin.xml"/>
  </export>

</package>
