cmake_minimum_required(VERSION 2.8.3)
project(willbot_description)
find_package(catkin REQUIRED urdf ur_description robotiq_3f_gripper_visualization)
catkin_package()
install(DIRECTORY cfg DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
install(DIRECTORY meshes DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
