<?xml version="1.0"?>
<package format="2">
  <name>willbot_description</name>
  <version>0.0.0</version>
  <description>The willbot_description package</description>

  <maintainer email="kalevatykh.igor@inria.fr">Igor Kalevatykh</maintainer>
  <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>  
  <exec_depend>urdf</exec_depend>

  <export>
  </export>
</package>
