<?xml version="1.0"?>
<package format="1">
  <name>willbot_moveit_plugins</name>
  <version>0.1.0</version>
  <description>The willbot_moveit_plugins package</description>

  <maintainer email="kalevatykh.igor@inria.fr">Igor Kalevatykh</maintainer>
  <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

	<build_depend>moveit_core</build_depend>
	<build_depend>moveit_ros_move_group</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>pluginlib</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>moveit_core</run_depend>
	<run_depend>moveit_ros_move_group</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>pluginlib</run_depend>
	<run_depend>std_msgs</run_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/capabilities_plugin_description.xml"/>
  </export>

</package>
