<?xml version="1.0"?>
<package format="2">
  <name>willbot_scripts</name>
  <version>0.1.0</version>
  <description>The willbot_scripts package</description>

  <maintainer email="kalevatykh.igor@inria.fr">Igor Kalevatykh</maintainer>
  <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>willbot_utils</depend>
  <exec_depend>python-numpy</exec_depend>

</package>
