<?xml version="1.0"?>
<package format="2">
  <name>willbot_simulation</name>
  <version>0.0.0</version>
  <description>The willbot_simulation package</description>

  <maintainer email="kalevatykh.igor@inria.fr">Igor Kalevatykh</maintainer>
  <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>willbot_description</exec_depend>

</package>
