<?xml version="1.0"?>
<package format="2">
  <name>willbot_utils</name>
  <version>0.1.0</version>
  <description>The willbot_utils package</description>

  <maintainer email="kalevatykh.igor@inria.fr">Igor Kalevatykh</maintainer>
  <author email="igor.kalevatykh@inria.fr">Igor Kalevatykh</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>python-numpy</exec_depend>

</package>
